[tool.poetry]
name = "multiproc"
version = "0.1.0"
description = ""
authors = ["lisvv <81390205+lisvv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
